@@ -12,3 +12,9 @@ Change log (recent come first)
 20 March 2008: first release of the tarball. Still very unstable.
   First tarball is released, just for letting people try the package.
 
+----:
+  * Bugfix on the strnlen implementation. Should affect only a limited
+    number of architectures.
+  * Introducing reference counting for objects allocated by the VM:
+    still not used to the full extent.
+
